--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -9,8 +9,31 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    @if (ViewData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success">
+            @ViewData["SuccessMessage"].ToString()
+        </div>
+    }
+    @if (ViewData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger">
+            @ViewData["ErrorMessage"].ToString()
+        </div>
+    }
+
+    <br/>
+
     <div class="container">
-        @RenderBody()
+        <div class="panel panel-default">
+            <div class="panel-heading"><h1>@ViewBag.Title</h1></div>
+
+            <div class="container">
+                <br/>
+                @RenderBody()
+                <br/>
+            </div>
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
