--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
     <br/>
 
     <div class="container">
-        <p><i>This is a test of the continuous deployment platform AppHarbor, it's data connectivity through SQL Server (yacto instance), entity framework 6 and the latest version of Bootstrap. It doesn't do anything special :)</i></p>
+        <p><i>This is another test of the continuous deployment platform AppHarbor, it's data connectivity through SQL Server (yacto instance), entity framework 6 and the latest version of Bootstrap. It doesn't do anything special :)</i></p>
 
         <div class="panel panel-default">
             <div class="panel-heading"><h1>@ViewBag.Title</h1></div>
