Added unit tests

--- a/WebSite/Views/Application/Delete.cshtml
+++ b/WebSite/Views/Application/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model NowOnline.AppHarbor.WebSite.Models.ApplicationViewModel
+﻿@model ChristiaanVerwijs.MvcSiteWithEntityFramework.WebSite.Models.ApplicationViewModel
 
 @{
     ViewBag.Title = "Delete your application";
