--- a/WebSite/Views/Application/Index.cshtml
+++ b/WebSite/Views/Application/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model NowOnline.AppHarbor.WebSite.Models.ApplicationListViewModel
+﻿@model ChristiaanVerwijs.MvcSiteWithEntityFramework.WebSite.Models.ApplicationListViewModel
 
 @{
     ViewBag.Title = "List of applications";
