--- a/WebSite/Views/Application/ManageApplicationPartial.cshtml
+++ b/WebSite/Views/Application/ManageApplicationPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model NowOnline.AppHarbor.WebSite.Models.ApplicationManageViewModel
+﻿@model ChristiaanVerwijs.MvcSiteWithEntityFramework.WebSite.Models.ApplicationManageViewModel
 
 @using (Html.BeginForm())
 {
