--- a/WebSite/Views/Application/Edit.cshtml
+++ b/WebSite/Views/Application/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model NowOnline.AppHarbor.WebSite.Models.ApplicationManageViewModel
+﻿@model ChristiaanVerwijs.MvcSiteWithEntityFramework.WebSite.Models.ApplicationManageViewModel
 
 @{
     ViewBag.Title = "Update your application";
