--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -21,18 +21,18 @@
         </div>
     }
 
-    <br/>
+    <br />
 
     <div class="container">
         <p><i>This is another test of the continuous deployment platform AppHarbor, it's data connectivity through SQL Server (yacto instance), entity framework 6 and the latest version of Bootstrap. It doesn't do anything special :)</i></p>
 
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
             <div class="panel-heading"><h1>@ViewBag.Title</h1></div>
 
-            <div class="container">
-                <br/>
+            <div class="frame">
+                <br />
                 @RenderBody()
-                <br/>
+                <br />
             </div>
         </div>
     </div>
