--- a/WebSite/Views/Application/ManageApplicationPartial.cshtml
+++ b/WebSite/Views/Application/ManageApplicationPartial.cshtml
@@ -9,6 +9,10 @@
         @Html.TextBoxFor(model => model.Name, new { @placeholder = "Enter name", @class = "form-control" })
     </div>
     <div class="form-group">
+        <label>@Html.LabelFor(model => model.Description)</label>
+        @Html.TextAreaFor(model => model.Description, new { @placeholder = "Enter description", @class = "form-control" })
+    </div>
+    <div class="form-group">
         <label>@Html.LabelFor(model => model.TeamId)</label>
         @Html.DropDownList("TeamId", null, "Select team", new { @placeholder = "Select team", @class = "form-control" })
     </div>
