Textual change and some tweaks for readability

--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     <br />
 
     <div class="container">
-        <p><i>This is another test of the continuous deployment platform AppHarbor, it's data connectivity through SQL Server (yacto instance), entity framework 6 and the latest version of Bootstrap. It doesn't do anything special :)</i></p>
+        <p><i>This is a simple webapplication that shows how to use Entity Framework 6, MVC4, Bootstrap, Ninject, Unit Testing, the Repository Pattern together. You can read more about this in this <a href="http://www.christiaanverwijs.nl/post/2013/12/05/Entity-Framework-MVC-Repositories-Code-First-Migrations-Putting-it-together.aspx">blogpost</a>.</i></p>
 
         <div class="panel panel-primary">
             <div class="panel-heading"><h1>@ViewBag.Title</h1></div>
